main.css
:root {
    --green: #d4ebd4;
    --white: #ffffff;
    --black: #000000;
}

* {
    font-family: 'Source Code Pro', monospace;
    color: var(--fontColor);
}

@font-face {
    font-family: "pressStart";
    src: url(pressstart2p-vav7-webfont.woff);
}

body {
    background: var(--bg);
    display: table;
    margin: auto;
}

header {
    background-color: #2d4b2f;
    position: relative;
    width: 100%;
    top: 0;
    left: 0;
    right: 0;
    height: 60px;
    display: flex;
    --fontColor: var(--green);
    align-items: center;
}

header * {
    display: inline-block;
    vertical-align: center;
}

header li {
    margin: 20px;
}

header li a {
    text-decoration: none;
}

h1 {
    position: relative;
    font-family: "pressStart";
    font-size: large;
    margin-top:0px;
}

ul {
    font-family: 'Source Code Pro', monospace;
}

.tasklist {
    font-family: 'Source Code Pro', monospace;
    position: relative;
    margin-top: 100px;
}

.list {
    list-style: square;
}

.light-theme {
    --bg: var(--green);
    --fontColor: var(--black);
    --btnBg: var(--black);
    --btnFontColor: var(--white);
}

.dark-theme {
    --bg: var(--black);
    --fontColor: var(--green);
    --btnBg: var(--white);
    --btnFontColor: var(--black);
}

img {
    border: 1px solid #ddd;
    border-radius: 50%;
    position: relative;
    top: 80px;
    padding: 5px;
    object-fit: cover;
    width: 150px;
    height: 150px
  }

.btn {
    position: fixed;
    top: 5px;
    right: 5px;
    height: 50px;
    width: 50px;
    border-radius: 50%;
    border: none;
    color: var(--btnFontColor);
    background-color: var(--btnBg);
}

.btn:focus {
    outline-style: none;
}

.aboutme-box {
    position: absolute;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
    width: 90vw;
    height: 90vw;
    background-color: rgb(118, 146, 113);
    border: 2px white;

}

